--- a/style/style.css
+++ b/style/style.css
@@ -57,8 +57,7 @@ input{
     color: black;
     display: block;
     padding: 20px;
-    transition-property: background;
-    transition-duration: 1s;
+    transition: background 1s;
 }
 .menu-principal a:hover{
     background: darkorange;
@@ -104,6 +103,69 @@ input{
     background-repeat: no-repeat;
     width: 100%;
     min-height: 80vh;
+}
+.modal-compra{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+    top: 0;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .8s;
+}
+.modal-show{
+    opacity: 1;
+    pointer-events: unset;
+}
+.cont-compra{
+    width: 60%;
+    height: 80%;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+}
+.cont-compra i{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.info-carrito{
+    width: 100%;
+    height: 70%;
+    overflow: scroll;
+}
+.producto{
+    background-color: white;
+    padding: 20px;
+    width: 95%;
+    height: 35%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    margin: 2px auto;
+    border: 2px solid gray;
+}
+.producto img{
+    width: 60%;
+    max-height: 160px;
+}
+.pie-compra{
+    position: absolute;
+    bottom: 0;
+    width: 95%;
+    margin-top: 10px;
+    padding: 0 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .columnas3{
     width: 80%;
