--- a/style/style.css
+++ b/style/style.css
@@ -26,16 +26,13 @@ header{
     margin-top: 10px;
     margin-right: 20px;
 }
-input{
+/* input{
     width: 300px;
-    border-radius: 25px;
-    border: black;
-    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     justify-content: space-between;
     margin: 20px 0;
-}
+} */
 #img-header{
     width: 100px;
     float: left;
