--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,9 @@ header{
     border-radius: 8px;
     border: 2px solid gray;
 }
+.icono-buscar:hover{
+    cursor: pointer;
+}
 .logo{
     padding-left: 2%;
 }
@@ -41,6 +44,9 @@ header{
     font-size: 48px;
     margin-top: 15px;
     margin-right: 40px;
+}
+.carrito:hover{
+    cursor: pointer;
 }
 #img-header{
     width: 100px;
@@ -97,7 +103,7 @@ header{
 .menu-categoria a:hover{
     background-color:darkorange;
     color: white;
-    width: 200px;
+    width: 180px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -144,7 +150,7 @@ header{
 }
 .info-carrito{
     width: 100%;
-    height: 70%;
+    height: 75%;
     overflow: scroll;
 }
 .eliminar:hover{
