--- a/style/style.css
+++ b/style/style.css
@@ -125,11 +125,13 @@ header{
     cursor: pointer;
 }
 .producto{
-    width: 95%;
+    width: 300px;
     min-height: 380px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 .producto img{
     width: 70%;
@@ -156,9 +158,10 @@ header{
     width: 95%;
     margin: auto;
     margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(4,300px);
-    grid-gap: 30px 2%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .imagenes{
     position: relative;
