--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ h1{
     margin-left: 10px;
 }
 header{
-    width: auto;
+    width: 100%;
     height: 80px;
     background-color: var(--color);
     color: white;
@@ -44,6 +44,7 @@ header{
     font-size: 48px;
     margin-top: 15px;
     margin-right: 40px;
+    float: right;
 }
 .carrito:hover{
     cursor: pointer;
@@ -209,27 +210,4 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
-@media (max-width:1200px){
-    header{
-        flex-direction: column;
-        justify-content: space-between;
-        display: block;
-        height: 150px;
-    }
-}
-@media (max-width:600px){
-    header{
-        flex-direction: column;
-        height: 230px;
-        display: block;
-    }
-    input{
-        margin-left: 20%;
-    }
-    .logo{
-        display: flex;
-        justify-content: center;
-    }
 }
